# claude-connector-apple-mail

./: .gitignore  .mcpbignore  LICENSE  README.md  build.sh  manifest.json  pyproject.toml
docs/: REPLY_DRAFT_DEBUGGING.md
src/apple_mail_mcp/: __init__.py  applescript.py  emlx.py  models.py  server.py
tests/: test_e2e.py  test_flag_features.py
tools/: dev_harness.py  draft_inspect.py  probe_autosave_timing.py  probe_strategies.py
