[project]
name = "apple-mail-mcp"
version = "0.2.0"
description = "MCP server for Apple Mail on macOS via Mail.app scripting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.3.0",
    "pydantic>=2.0.0",
]

[project.scripts]
apple-mail-mcp = "apple_mail_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_mail_mcp"]

[tool.uv]
dev-dependencies = []
